# Projects-in-C-and-Cpp

./: README.md
AirController/: CMakeLists.txt
Datastructur og Algorithm projects/AirController/: flightqueue.h  main.cpp
Datastructur og Algorithm projects/ExpressionParsing_and_Evaluation/: CMakeLists.txt
Datastructur og Algorithm projects/Maze/: CMakeLists.txt  mazeworld.txt
Datastructur og Algorithm projects/Polygon/: CMakeLists.txt  main.cpp  stack.h
ExpressionParsing_and_Evaluation/: main.cpp  parser.h
Maze/: main.cpp  queues.h
Polygon/: list.h  test1
project_1/: CMakeLists.txt  main.c
